# coding-flow

./: AGENTS.md  Cargo.toml  GEMINI.md  PROPOSAL-P006-agent-first-coding-guard.md  README.md  US-001.md  US-next-flow.md  US-state.md  US-update-packet-workflow.md  package.json
.coding/: PLAN.md  REQUEST.md  SHIP.md  VERIFY.md  current  plan.json  request.json  ship.json  state.json  verify.json
.coding/knowledge/: PROBLEMS.md  decisions.md
.coding/packets/20260602-113855-time-capsule-notes/: INTAKE.md  PACKET.md  PACKET_SHIP.md  PACKET_VERIFY.md  REQUEST.md  STORIES.md
cache/: projects.json
examples/: agent-coding.sh  agent-plan.sh  coding.json  coding.stdin.sh  intake.json  packet.json  packet_ship.json  packet_verify.json  plan.json  plan.stdin.sh  request.json  request.stdin.sh  ship.json  ship.stdin.sh  stories.json  verify.json  verify.stdin.sh
focus-garden/: index.html  package-lock.json  package.json
focus-garden/src/: main.js  style.css
schemas/: coding.schema.json  decision.schema.json  intake.schema.json  packet.schema.json  plan.schema.json  problem.schema.json  request.schema.json  ship.schema.json  stories.schema.json  story.schema.json  verify.schema.json
skills/: agent-coding.md  agent-plan.md  coding.md  intake.md  packet-brief.md  packet-ship.md  packet-split.md  packet-verify.md  plan.md  request.md  ship.md  verify.md
src/: lib.rs  main.rs  workflow_vocab.rs
templates/: intake.md  packet.md  packet_ship.md  packet_verify.md  plan.md  request.md  ship.md  stories.md  story.md  verify.md
(+134 files in other folders)
