[package]
name = "coding-flow-v0"
version = "0.0.1"
edition = "2021"
description = "Tiny coding workflow: request -> plan -> verify -> ship"
license = "MIT"
publish = false

[[bin]]
name = "cflow"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = "0.4"
shell-words = "1.1"
toml = "0.8"
